trying to update my bootstrap html file

--- a/Web_DevelopMental_Bootstrap-index.html
+++ b/Web_DevelopMental_Bootstrap-index.html
@@ -205,12 +205,12 @@ add this to the row content to stop mess-ups over lapping and shish.
             <!-- <div class="col-sm-2 sidenav text-center">-->
             <div class="well">
               <h3 class="text-secondary" >Outside Links</h3>
-              <p><a class="text-success" href="www.freecodecamp.org">FreeCodeCamp.org</a></p>
-              <p> <a class="text-success" href="www.w3schools.com">W3Schools.com
+              <p><a class="text-success" href="http://www.freecodecamp.org" target="_blank" >FreeCodeCamp.org</a></p>
+              <p> <a class="text-success" target="_blank" href="http://www.w3schools.com">W3Schools.com
               </a></p>
-              <p><a class="text-success" href="www.codeanywhere.com">CodeAnywhere.com</a></p>
-              <p><a class="text-success" href="www.jsconsole.com">Jsconsole.com</a></p>
-              <p><a class="text-success" href="www.greenvilleKratom.com">GreenvilleKratom.com</a></p>
+              <p><a class="text-success" target="_blank" href="http://www.codeanywhere.com">CodeAnywhere.com</a></p>
+              <p><a class="text-success" target="_blank" href="http://www.jsconsole.com">Jsconsole.com</a></p>
+              <p><a class="text-success" target="_blank" href="http://www.greenvilleKratom.com">GreenvilleKratom.com</a></p>
             </div>
           </div>
         </div>
