commiting changes for folio site, added background image but with divs and content tag and z-index and whatnot

--- a/Portfolio/webdevelopfolio.html
+++ b/Portfolio/webdevelopfolio.html
@@ -83,10 +83,12 @@
 			<div class="header">
 				<h1>Thomas Ashton Rio</h1>
 				<p>Aspiring Front-End Web Developer</p>
+				<a href="#" class="fa fa-github"></a>
+				<a href="#" class="fa fa-linkedin"></a>
 				<a href="#" class="fa fa-twitter"></a>
-				<a href="#" class="fa fa-youtube"></a>
+				<a style="padding-right:20px;" href="#" class="fa fa-free-code-camp" ></a>
 			</div>
-			<img src="me_chalkin_code2.jpeg" alt="Thomas Rio coding in chalk">
+			<!-- <img src="me_chalkin_code2.jpeg" alt="Thomas Rio coding in chalk"> -->
 			<script>
 				function  myFunction(){
 					var x = document.getElementById("myLinks");
