--- a/Portfolio/webdevelopfolio-resume.html
+++ b/Portfolio/webdevelopfolio-resume.html
@@ -1,5 +1,3 @@
-<!-- https://stackoverflow.com/questions/41447827/pure-js-slide-menu-ability-to-close-it-on-click-outside-of-the-menu -->
-
 <!--/* CSS - Cascading Style Sheet */
 /* Palette color codes */
 /* Palette URL: http://paletton.com/#uid=35z0u0kgJSq00++4TYYqYP5+UB6 */
@@ -61,7 +59,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>RioTFolio</title>
+		<title>RioT Resume</title>
 		<link rel="stylesheet" href="assets/stylesheets/mainfolio.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -70,51 +68,36 @@
 		
 	</head>
 	<body>
-		 <div class="mobile-container">
-			<!-- <div class="topnav">
+		<div class="mobile-container">
+			<div class="topnav">
 				<a href="#home" class="active"><i class="fa fa-home"></i></a>
 				<div id="myLinks">
 					<a href="#projects">Projects</a>
-					<a href="webdevelopfolio-resume.html" target="_blank">R&eacute;sum&eacute</a>
+					<a href="webdevelopfolio-resume;.html" target="_blank">R&eacutesum&eacute</a>
 					<a href="#about">About</a>
 				</div>
 				<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars">
 					</i>
 				</a>
-			</div>-->
-			
-			 <!-- this is how to build the overlay 
-		https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_overlay
-			 --><div id="myNav" class="overlay">
-				<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-					<div class="overlay-content">
-						<a href="#">About</a>
-						<a href="#">Projects</a>
-						<a href="#">R&eacute;sum&eacute;</a> 
-					</div>
 			</div>
-			
 			<div class="header">
-				<a href="#" class="active"><i class="fa fa-bars"></i></a>
-				<h1>Thomas Ashton Rio</h1>
+				<h1>R&eacutesum&eacute for Thomas Ashton Rio</h1>
 				<p>Aspiring Front-End Web Developer</p>
 				<a href="#" class="fa fa-github"></a>
 				<a href="#" class="fa fa-linkedin"></a>
 				<a href="#" class="fa fa-twitter"></a>
 				<a style="padding-right:20px;" href="#" class="fa fa-free-code-camp" ></a>
 			</div>
-			</div>
 			<!-- <img src="me_chalkin_code2.jpeg" alt="Thomas Rio coding in chalk"> -->
 			<script>
-				// function  myFunction(){
-				// 	var x = document.getElementById("myLinks");
-				// 	if (x.style.display === "block"){
-				// 		x.style.display = "none";
-				// 	}else{
-				// 		x.style.display = "block";
-				// 	}
-				// }
-					function openNav
+				function  myFunction(){
+					var x = document.getElementById("myLinks");
+					if (x.style.display === "block"){
+						x.style.display = "none";
+					}else{
+						x.style.display = "block";
+					}
+				}
 			</script>
 		</div>
 	</body>
