added new page for projects as well as tidied up the main page and layover, hyperlinks and such

--- a/Portfolio/webdevelopfolio-projects.html
+++ b/Portfolio/webdevelopfolio-projects.html
@@ -96,7 +96,7 @@
 		</div>
 			<div class="header">
 			<a class='openbtn' href="#" onclick="openNav()"><i class="fa fa-bars"></i></a>
-				<h1>Thomas Ashton Rio <br>R&eacutesum&eacute</h1>
+				<h1>Thomas Ashton Rio <br>Projects</h1>
 				<p>Front-end Web Developer</p>
 			<!-- 	<a href="https://github.com/sunbun2461"  target="_blank" 
 			class="fa fa-github icon"></a>
@@ -123,8 +123,5 @@
 			}
 			</script>
 		</div>
-		<footer>
-			<a href="favicon.ico" download="Practice"><button></button></a>
-		</footer>
 	</body>
 </html>
