intermittent commit, added a screenshot of old project protfolio

--- a/Portfolio/webdevelopfolio.html
+++ b/Portfolio/webdevelopfolio.html
@@ -1,26 +1,4 @@
 <!-- Notes -->
-<!-- Site requirements:
-contact info:
-	email
-	phone number
-	obvs soc med 
-bio
-	personality
-	short and sweet
-	highlights (study everyday, blah blah)
-experience
-	skills, technical
-	work
-	volunteering
-projects
-	how do i want to do these? thumbnails? lets keep looking and decide.
-Edu
-	just put it. and aspirations
-Photo
-	
-Resume
-	pdf
--->
 
 
 
@@ -100,7 +78,7 @@ Resume
 			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 			<div class="overlay-content">		
 				<a href="webdevelopfolio.html"><i class="fa fa-home"></i></a>
-				<a href="#">About</a>
+				<a href="webdevelopfolio-about.html">About</a>
 				<a href="webdevelopfolio-projects.html">Projects</a>
 				<a href="webdevelopfolio-resume.html">R&eacute;sum&eacute;</a> <!-- resume -->
 			</div>
