--- a/Portfolio/webdevelopfolio-resume.html
+++ b/Portfolio/webdevelopfolio-resume.html
@@ -89,7 +89,7 @@
 			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 			<div class="overlay-content">
 				<a href="webdevelopfolio.html"><i class="fa fa-home"></i></a>
-				<a href="#">About</a>
+				<a href="webdevelopfolio-about.html">About</a>
 				<a href="webdevelopfolio-projects.html">Projects</a>
 				<a href="webdevelopfolio-resume.html">R&eacute;sum&eacute;</a> <!-- resume -->
 			</div>
