--- a/Portfolio/webdevelopfolio-about.html
+++ b/Portfolio/webdevelopfolio-about.html
@@ -1,40 +1,37 @@
 <!-- Notes -->
-
-
-
 <!-- https://stackoverflow.com/questions/41447827/pure-js-slide-menu-ability-to-close-it-on-click-outside-of-the-menu -->
 <!--/* CSS - Cascading Style Sheet */
 /* Palette color codes */
 /* Palette URL: http://paletton.com/#uid=35z0u0kgJSq00++4TYYqYP5+UB6 */
 /* Feel free to copy&paste color codes to your application */
 /* As hex codes */
-	.color-primary-0 { color: #FC7888 }	/* Main Primary color */
+		.color-primary-0 { color: #FC7888 }	/* Main Primary color */
 .color-primary-1 { color: #FFFFFF }
 .color-primary-2 { color: #FED8DC }
 .color-primary-3 { color: #FB2840 }
 .color-primary-4 { color: #F7001D }
-	.color-secondary-1-0 { color: #6EE6D2 }	/* Main Secondary color (1) */
+		.color-secondary-1-0 { color: #6EE6D2 }	/* Main Secondary color (1) */
 .color-secondary-1-1 { color: #FFFFFF }
 .color-secondary-1-2 { color: #D3F9F3 }
 .color-secondary-1-3 { color: #23DCBD }
 .color-secondary-1-4 { color: #00B395 }
-	.color-secondary-2-0 { color: #D7FB78 }	/* Main Secondary color (2) */
+		.color-secondary-2-0 { color: #D7FB78 }	/* Main Secondary color (2) */
 .color-secondary-2-1 { color: #FFFFFF }
 .color-secondary-2-2 { color: #F3FED7 }
 .color-secondary-2-3 { color: #BFFA27 }
 .color-secondary-2-4 { color: #B0F400 }
 /* As RGBa codes */
-	.rgba-primary-0 { color: rgba(252,120,136,1) }	/* Main Primary color */
+		.rgba-primary-0 { color: rgba(252,120,136,1) }	/* Main Primary color */
 .rgba-primary-1 { color: rgba(255,255,255,1) }
 .rgba-primary-2 { color: rgba(254,216,220,1) }
 .rgba-primary-3 { color: rgba(251, 40, 64,1) }
 .rgba-primary-4 { color: rgba(247,  0, 29,1) }
-	.rgba-secondary-1-0 { color: rgba(110,230,210,1) }	/* Main Secondary color (1) */
+		.rgba-secondary-1-0 { color: rgba(110,230,210,1) }	/* Main Secondary color (1) */
 .rgba-secondary-1-1 { color: rgba(255,255,255,1) }
 .rgba-secondary-1-2 { color: rgba(211,249,243,1) }
 .rgba-secondary-1-3 { color: rgba( 35,220,189,1) }
 .rgba-secondary-1-4 { color: rgba(  0,179,149,1) }
-	.rgba-secondary-2-0 { color: rgba(215,251,120,1) }	/* Main Secondary color (2) */
+		.rgba-secondary-2-0 { color: rgba(215,251,120,1) }	/* Main Secondary color (2) */
 .rgba-secondary-2-1 { color: rgba(255,255,255,1) }
 .rgba-secondary-2-2 { color: rgba(243,254,215,1) }
 .rgba-secondary-2-3 { color: rgba(191,250, 39,1) }
@@ -58,16 +55,16 @@
 	</head>
 	<body>
 		<!--<div class="mobile-container">
-				<div class="topnav">
-						<a href="#home" class="active"><i class="fa fa-home"></i></a>
-						<div id="myLinks">
-								<a href="#projects">Projects</a>
-				ume.html" target="_blank">R&eacute;sum&eacute</a>
-				<a href="#about">About</a>
-					</div>
-					<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars">
-							</i>
-					</a>
+					<div class="topnav">
+								<a href="#home" class="active"><i class="fa fa-home"></i></a>
+								<div id="myLinks">
+											<a href="#projects">Projects</a>
+						ume.html" target="_blank">R&eacute;sum&eacute</a>
+						<a href="#about">About</a>
+						</div>
+						<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars">
+									</i>
+						</a>
 		</div>-->
 		
 		<!-- this is how to build the overlay
@@ -76,7 +73,7 @@
 		<div class="mobile-background"></div>
 		<div id="myNav" class="overlay">
 			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-			<div class="overlay-content">		
+			<div class="overlay-content">
 				<a href="webdevelopfolio.html"><i class="fa fa-home"></i></a>
 				<a href="webdevelopfolio-about.html">About</a>
 				<a href="webdevelopfolio-projects.html">Projects</a>
@@ -86,38 +83,59 @@
 		
 		<div class="header">
 			<a class='openbtn' href="#" onclick="openNav()"><i class="fa fa-bars"></i></a>
-			<h1>Thomas Ashton Rio</h1>
+			
+			<h1>About <br><em>Thomas Ashton Rio</em></h1>
 			<p>Front-end Web Developer</p>
-			<p>I've been learning to code for 8 months, consistently 4 hours a day.  I have been teaching myself:</p>
+			<p><span style="color:black;">Eat. Sleep. Breath</span> Development, every spare second I get.  In 7 months (while working full time) I've learned:</p>
 			<ul>
 				<li>HTML5</li>
 				<li>CSS3</li>
 				<li>Vanilla JavaScript</li>
 				<li>Bootstrap</li>
 				<li>Computer Science Curriculem</li>
+				<li>(JQuery)</li>
+				<li>(AJAX)</li>
+				<li>(SQL)</li>
 			</ul>
+			<!-- <p>I've completed:</p> -->
+		    <a href="#" class="fa fa-free-code-camp"></a> 
+			<p>freeCodeCamp.org's</p>
+				 
+			<ul>
+				<li>Responsive Web Design Certification (300 hours)</li>
+				<li>Javascript Algorithms And Data Structures Certification (300 hours)</li>
+			</ul>
+			
+			<p>I'm a hard worker, I love:</p>
+			<ul>
+				<li>Learning</li>
+				<li>Movies</li>
+				<li>Yoga</li>
+				<li>Achieving Goals</li>
+		    </ul>
 
-			<a href="mailto:a.thomas.rio@gmail.com" class="fa fa-envelope-square"></a>
-			<a href="https://github.com/sunbun2461"  target="_blank" 
+		    <p>I am available for hire, preferrably full-time.  My contact info is below, github, linkedIn and another link to my projects.</p> 
+			<a href="mailto:a.thomas.rio@gmail.com" class="fa fa-envelope-square topIcon"></a>
+			<a href="https://github.com/sunbun2461"  target="_blank"
 			class="fa fa-github"></a>
 			<a href="#" class="fa fa-linkedin"></a>
-			<a href="#" class="fa fa-twitter"></a>
-			<a href="#" class="fa fa-free-code-camp" ></a>
+			<a href="#" class="fa fa-code" aria-hidden="true"></a>
+		<!-- 	<a href="#" class="fa fa-twitter"></a>
+			<a href="#" class="fa fa-free-code-camp" ></a> -->
 		</div>
 		
 		<!--<img src="../images/me_chalkin_code2.jpeg" alt="Thomas Rio coding in chalk"> -->
 		<script>
 			// function  myFunction(){
-				// 	var x = document.getElementById("myLinks");
-				// 	if (x.style.display === "block"){
-					// 		x.style.display = "none";
-				// 	}else{
-					// 		x.style.display = "block";
-				// 	}
+					// 	var x = document.getElementById("myLinks");
+					// 	if (x.style.display === "block"){
+							// 		x.style.display = "none";
+					// 	}else{
+							// 		x.style.display = "block";
+					// 	}
 			// }
-			     openNav = () =>  
-				document.getElementById('myNav').style.width = '100%';  // trying both function types for practice 
-
+			openNav = () =>
+				document.getElementById('myNav').style.width = '100%';  // trying both function types for practice
 				function closeNav(){
 					document.getElementById('myNav').style.width = '0%';
 				}
