--- a/Portfolio/webdevelopfolio-about.html
+++ b/Portfolio/webdevelopfolio-about.html
@@ -86,36 +86,38 @@
 			
 			<h1>About <br><em>Thomas Ashton Rio</em></h1>
 			<p>Front-end Web Developer</p>
-			<p><span style="color:black;">Eat. Sleep. Breath</span> Development, every spare second I get.  In 7 months (while working full time) I've learned:</p>
+			<p><span style="color:black;">Eat. Sleep. Breath</span> Development, every spare second I get. <br> In 7 months (while working full time) I've learned:</p>
 			<ul>
 				<li>HTML5</li>
 				<li>CSS3</li>
-				<li>Vanilla JavaScript</li>
+				<li>Vanilla JavaScript (Currently ## of 100, in an <a href="#">Algorithm challenge</a>)</li>
 				<li>Bootstrap</li>
-				<li>Computer Science Curriculem</li>
 				<li>(JQuery)</li>
 				<li>(AJAX)</li>
+				<li>(Angular)</li>
+				<li>(React)</li>
 				<li>(SQL)</li>
+				<li>Computer Science Curriculum</li>
 			</ul>
 			<!-- <p>I've completed:</p> -->
-		    <a href="#" class="fa fa-free-code-camp"></a> 
-			<p>freeCodeCamp.org's</p>
+		    <a href="#" class="aboutFCC fa fa-free-code-camp aboutFCC"></a> 
+			<p id="aboutP">freeCodeCamp.org's</p>
 				 
 			<ul>
 				<li>Responsive Web Design Certification (300 hours)</li>
 				<li>Javascript Algorithms And Data Structures Certification (300 hours)</li>
 			</ul>
-			
-			<p>I'm a hard worker, I love:</p>
+
+			<p style="margin-top: 4.5em;margin-bottom: 0px">I'm a hard worker, I love:</p>
 			<ul>
 				<li>Learning</li>
 				<li>Movies</li>
 				<li>Yoga</li>
 				<li>Achieving Goals</li>
 		    </ul>
-
-		    <p>I am available for hire, preferrably full-time.  My contact info is below, github, linkedIn and another link to my projects.</p> 
-			<a href="mailto:a.thomas.rio@gmail.com" class="fa fa-envelope-square topIcon"></a>
+			
+		    <p style="margin-top: 4em;">I am available for hire, preferrably full-time.  My contact info is below, github, linkedIn and another link to my projects.</p> 
+			<a href="mailto:a.thomas.rio@gmail.com" class="fa fa-envelope-square"></a>
 			<a href="https://github.com/sunbun2461"  target="_blank"
 			class="fa fa-github"></a>
 			<a href="#" class="fa fa-linkedin"></a>
@@ -123,6 +125,8 @@
 		<!-- 	<a href="#" class="fa fa-twitter"></a>
 			<a href="#" class="fa fa-free-code-camp" ></a> -->
 		</div>
+		<footer>
+		</footer>
 		
 		<!--<img src="../images/me_chalkin_code2.jpeg" alt="Thomas Rio coding in chalk"> -->
 		<script>
