--- a/Portfolio/webdevelopfolio-projects.html
+++ b/Portfolio/webdevelopfolio-projects.html
@@ -76,7 +76,7 @@
 		<a href="#" class="fa fa-free-code-camp icon" ></a>
 		-->
 		<div class="thumb">
-			<a href="#">
+			<a href="http://www.immaturegenius.com">
 				<img src="#">
 				<div class="info-container">
 					<p>Coding Blog</p>
