--- a/Portfolio/webdevelopfolio-resume.html
+++ b/Portfolio/webdevelopfolio-resume.html
@@ -124,7 +124,9 @@
 			</script>
 		</div>
 		<footer>
-			<a href="favicon.ico" download="Practice"><button></button></a>
+			<div class="download">
+			<a href="favicon.ico" download="Practice"><button>Download my Resume</button></a>
+		   </div>
 		</footer>
 	</body>
 </html>
