--- a/Portfolio/webdevelopfolio.html
+++ b/Portfolio/webdevelopfolio.html
@@ -1,4 +1,9 @@
-<!--building this mobile first, so i will assume everything is going to be for mobile, and then change it. however, does that mean I need two nav bars? i dont put the media query in the HTML so maybe yes I do need two nav bars.-->
+<!--
+website for local machine:
+
+file:///home/thomas/Dropbox/Web%20Dev/MyGit/Portfolio/webdevelopfolio-about.html
+
+	building this mobile first, so i will assume everything is going to be for mobile, and then change it. however, does that mean I need two nav bars? i dont put the media query in the HTML so maybe yes I do need two nav bars.-->
 
 <!DOCTYPE html>
 <html lang="en-us">
