--- a/Portfolio/webdevelopfolio-projects.html
+++ b/Portfolio/webdevelopfolio-projects.html
@@ -65,7 +65,9 @@
 			<a href="webdevelopfolio-resume.html">R&eacute;sum&eacute;</a> <!-- resume -->
 		</div>
 	</div>
+	<div id="main">
 	<div class="header">
+		<a class="openbtnDesktop" href="#" onclick="openNav2()"><i class="fa fa-bars"></i></a>
 		<a class='openbtn' href="#" onclick="openNav()"><i class="fa fa-bars"></i></a>
 		<h1>Thomas Ashton Rio <br>Projects</h1>
 		<p>Front-end Web Developer</p>
@@ -107,15 +109,24 @@
 				</div>
 			</a>
 		</div>
-		
+		</div>
 		<!-- <img src="me_chalkin_code2.jpeg" alt="Thomas Rio coding in chalk"> -->
 		<script>
 		openNav = () =>
 			document.getElementById('myNav').style.width = '100%';
-		function closeNav(){
-			document.getElementById('myNav').style.width = '0%'
-		}
+					 openNav2 = () => {
+				document.getElementById('myNav').style.width = '250px';
+				document.getElementById('main').style.marginLeft = '250px';
+				document.body.style.backgroundColor = 'rgba(6,66,115,.4)';
+
+			}
+
+				function closeNav(){
+					document.getElementById('myNav').style.width = '0%';
+					document.getElementById('main').style.marginLeft='0%';
+					document.body.style.backgroundColor = 'white';
+				}
 		</script>
-	</div>
+	
 </body>
 </html>
