--- a/Portfolio/webdevelopfolio-resume.html
+++ b/Portfolio/webdevelopfolio-resume.html
@@ -59,7 +59,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>RioT Resume</title>
+		<title>My R&eacute;sum&eacute;</title>
 		<link rel="stylesheet" href="assets/stylesheets/mainfolio.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -94,7 +94,9 @@
 				<a href="webdevelopfolio-resume.html">R&eacute;sum&eacute;</a> <!-- resume -->
 			</div>
 		</div>
+		<div id="main">
 			<div class="header">
+				<a class="openbtnDesktop" href="#" onclick="openNav2()"><i class="fa fa-bars"></i></a>
 			<a class='openbtn' href="#" onclick="openNav()"><i class="fa fa-bars"></i></a>
 				<h1>Thomas Ashton Rio <br>R&eacutesum&eacute</h1>
 				<p>Front-end Web Developer</p>
@@ -104,6 +106,7 @@
 				<a href="#" class="fa fa-twitter icon"></a>
 				<a href="#" class="fa fa-free-code-camp icon" ></a>
  -->			</div>
+				</div>
 			<!-- <img src="me_chalkin_code2.jpeg" alt="Thomas Rio coding in chalk"> -->
 			<script>
 			//	function  myFunction(){
@@ -118,11 +121,22 @@
 			     openNav = () =>  
 				document.getElementById('myNav').style.width = '100%';
 
-			function closeNav(){
-				document.getElementById('myNav').style.width = '0%'
+		
+				 openNav2 = () => {
+				document.getElementById('myNav').style.width = '250px';
+				document.getElementById('main').style.marginLeft = '250px';
+				document.body.style.backgroundColor = 'rgba(6,66,115,.4)';
+
 			}
+
+				function closeNav(){
+					document.getElementById('myNav').style.width = '0%';
+					document.getElementById('main').style.marginLeft='0%';
+					document.body.style.backgroundColor = 'white';
+				}
+
+
 			</script>
-		</div>
 		<footer>
 			<div class="download">
 			<a href="favicon.ico" download="Practice"><button>Download my Resume</button></a>
