desktop version updated and tweaked, colors and some text

--- a/Portfolio/webdevelopfolio-about.html
+++ b/Portfolio/webdevelopfolio-about.html
@@ -74,21 +74,24 @@
 		<div id="myNav" class="overlay">
 			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 			<div class="overlay-content">
+
 				<a href="webdevelopfolio.html"><i class="fa fa-home"></i></a>
 				<a href="webdevelopfolio-about.html">About</a>
 				<a href="webdevelopfolio-projects.html">Projects</a>
 				<a href="webdevelopfolio-resume.html">R&eacute;sum&eacute;</a> <!-- resume -->
 			</div>
 		</div>
+
+		
 		<div id="main">
 		<div class="header">
-			<a class="openbtnDesktop" href="#" onclick="openNav2()"><i class="fa fa-bars"></i></a>
-			<a class='openbtn' href="#" onclick="openNav()"><i class="fa fa-bars"></i></a>
+			<span class="openbtnDesktop" href="#" onclick="openNav2()"><i class="fa fa-bars"></i></span>
+			<a class='openbtn' onclick="openNav()"><i class="fa fa-bars"></i></a>
 			
-			<h1>About <br><em>Thomas Ashton Rio</em></h1>
-			<p style="color:black;">Front-end Web Developer</p>
-			<p style="margin-top:10%;"><span style="color:black;">Eat. Sleep. Breath</span> Development, every spare second I get. <br> In 7 months (while working full time) I've learned:</p>
-			<ul style="color:black;">
+			<h1>About <br>Thomas Ashton Rio</h1>
+			<p>Front-end Web Developer</p>
+			<p style="margin-top:10%;">In 7 months (while working full time) I've learned:</p>
+			<ul>
 				<li>HTML5</li>
 				<li>CSS3</li>
 				<li>Vanilla JavaScript (Currently ## of 100, in an <a href="#">Algorithm challenge</a>)</li>
@@ -110,15 +113,9 @@
 				<li>(Javascript Algorithms And Data Structures Certification (300 hours))</li>
 			</ul>
 
-			<p style="margin-top: 4.5em;margin-bottom: 0px">I'm a hard worker, I love:</p>
-			<ul>
-				<li>Learning</li>
-				<li>Movies</li>
-				<li>Yoga</li>
-				<li>Achieving Goals</li>
-		    </ul>
+			<p style="margin-top: 4.5em;margin-bottom: 0px"></p>
 			
-		    <p style="margin-top: 4em;">I am available for hire, preferrably full-time.  My contact info is below, github, linkedIn and another link to my projects.</p> 
+		    <p style="margin-top: 4em;">I am available for hire, preferrably full-time.  Find my e-mail is below, GitHub, LinkedIn and link to my projects.</p> 
 			<a href="mailto:a.thomas.rio@gmail.com" class="fa fa-envelope-square"></a>
 			<a href="https://github.com/sunbun2461"  target="_blank"
 			class="fa fa-github"></a>
