--- a/Portfolio/webdevelopfolio.html
+++ b/Portfolio/webdevelopfolio.html
@@ -57,10 +57,12 @@ current issues: 4/20
 		</div>
 		<div id="main">
 		<div class="header">
-			<a class="openbtnDesktop" href="#" onclick="openNav2()"><i class="fa fa-bars"></i></a>
+			
+		<span class="openbtnDesktop" href="#" onclick="openNav2()"><i class="fa fa-bars"></i></span>
 			<a class='openbtn' href="#" onclick="openNav()"><i class="fa fa-bars"></i></a>
-			<h1><em>Thomas Ashton Rio</em></h1>
+			<h1>Thomas Ashton Rio</h1>
 			<p>Front-end Web Developer</p>
+			<h1>Eat. Sleep. Breath. Develop.</h1>
 			<a href="https://github.com/sunbun2461"  target="_blank" 
 			class="fa fa-github"></a>
 			<a href="https://www.linkedin.com/in/thomas-rio-b2462a3b/" target="_blank" class="fa fa-linkedin"></a>
