--- a/Portfolio/webdevelopfolio-projects.html
+++ b/Portfolio/webdevelopfolio-projects.html
@@ -67,7 +67,7 @@
 	</div>
 	<div id="main">
 	<div class="header">
-		<a class="openbtnDesktop" href="#" onclick="openNav2()"><i class="fa fa-bars"></i></a>
+		<span class="openbtnDesktop" href="#" onclick="openNav2()"><i class="fa fa-bars"></i></span>
 		<a class='openbtn' href="#" onclick="openNav()"><i class="fa fa-bars"></i></a>
 		<h1>Thomas Ashton Rio <br>Projects</h1>
 		<p>Front-end Web Developer</p>
