site should be very minutely ready for certain people to view but not production

--- a/Portfolio/webdevelopfolio-resume.html
+++ b/Portfolio/webdevelopfolio-resume.html
@@ -84,7 +84,7 @@
 					<span class="openbtnDesktop" href="#" onclick="openNav2()"><i class="fa fa-bars"></i></span>
 					<a class='openbtn' href="#" onclick="openNav()"><i class="fa fa-bars"></i></a>
 					<h1>Thomas Ashton Rio <br>R&eacutesum&eacute</h1>
-					<p>Front-end Web Developer</p>
+					<p style="font-weight: lighter;">Front-end Web Developer</p>
 					<!-- 	<a href="https://github.com/sunbun2461"  target="_blank"
 					class="fa fa-github icon"></a>
 					<a href="#" class="fa fa-linkedin icon"></a>
