--- a/Portfolio/webdevelopfolio.html
+++ b/Portfolio/webdevelopfolio.html
@@ -55,20 +55,22 @@ current issues: 4/20
 				<a href="webdevelopfolio-resume.html">R&eacute;sum&eacute;</a> <!-- resume -->
 			</div>
 		</div>
-		<div id="main">
+		<div id="main" style="overflow:hidden;">
 		<div class="header">
 			
 		<span class="openbtnDesktop" href="#" onclick="openNav2()"><i class="fa fa-bars"></i></span>
 			<a class='openbtn' href="#" onclick="openNav()"><i class="fa fa-bars"></i></a>
 			<h1>Thomas Ashton Rio</h1>
-			<p>Front-end Web Developer</p>
-			<h1>Eat. Sleep. Breath. Develop.</h1>
+			<p style="font-weight: lighter;">Front-end Web Developer</p>
+			<h2>Eat. Sleep. Breath. Develop.</h2>
+			<div class="fa-container">
 			<a href="https://github.com/sunbun2461"  target="_blank" 
 			class="fa fa-github"></a>
 			<a href="https://www.linkedin.com/in/thomas-rio-b2462a3b/" target="_blank" class="fa fa-linkedin"></a>
 			<!-- <a href="#" class="fa fa-twitter"></a> -->
 			<a href="http://immaturegenius.com" class="fa fa-code" aria-hidden="true"></a>
 			<a href="assets/images/freecodecampCert.png" class="fa fa-free-code-camp" target="_blank" ></a>
+		</div>
 		</div>
 		</div>
 		<!--<img src="../images/me_chalkin_code2.jpeg" alt="Thomas Rio coding in chalk"> -->
