ready to be seen by some

--- a/Portfolio/webdevelopfolio-resume.html
+++ b/Portfolio/webdevelopfolio-resume.html
@@ -49,6 +49,7 @@
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Permanent+Marker" rel="stylesheet">
 		
 	</head>
 	<body>
@@ -83,7 +84,7 @@
 					
 					<span class="openbtnDesktop" href="#" onclick="openNav2()"><i class="fa fa-bars"></i></span>
 					<a class='openbtn' href="#" onclick="openNav()"><i class="fa fa-bars"></i></a>
-					<h1>Thomas Ashton Rio <br>R&eacutesum&eacute</h1>
+					<h1>Thomas<span>&#8226;</span>Ashton<span>&#8226;</span>Rio</h1>
 					<p style="font-weight: lighter;">Front-end Web Developer</p>
 					<!-- 	<a href="https://github.com/sunbun2461"  target="_blank"
 					class="fa fa-github icon"></a>
@@ -91,7 +92,7 @@
 					<a href="#" class="fa fa-twitter icon"></a>
 					<a href="#" class="fa fa-free-code-camp icon" ></a>
 				-->			
-			<a href='favicon.ico' download="practice"><div class="button">
+			<a href='assets/images/Thomas_Ashton_Rio_Resume.pdf' download="Thomas Ashton Rio Resume"><div class="button">
 				<p class="btnText">PDF Download</p>
 				<div class="btnTwo">
 					<p class="btnText2">Go!</p>
