major overhaul to folio sight, new Javascript I wrote myself albiet it is somewhat redundant, but I will refactor it when I learn more, it works so that is what matter now

--- a/Portfolio/webdevelopfolio-projects.html
+++ b/Portfolio/webdevelopfolio-projects.html
@@ -70,7 +70,8 @@
 	<div class="header">
 		<span class="openbtnDesktop" href="#" onclick="openNav2()"><i class="fa fa-bars"></i></span>
 		<a class='openbtn' href="#" onclick="openNav()"><i class="fa fa-bars"></i></a>
-		<h1>Thomas<span>&#8226;</span>Ashton<span>&#8226;</span>Rio</h1>
+		<h1 class="mobileOnly">Thomas Ashton Rio</h1>
+			<h1 class="desktopOnly">Thomas<span>&#8226;</span>Ashton<span>&#8226;</span>Rio</h1>
 		<p style="font-weight: lighter;">Front-end Web Developer</p>
 		<!-- 	<a href="https://github.com/sunbun2461"  target="_blank"
 		class="fa fa-github icon"></a>
@@ -80,31 +81,31 @@
 		-->
 		<div class="thumb">
 			<a href="http://www.immaturegenius.com">
-				<img src="#">
+				<img src="assets/images/immaturegenius-project.png">
 				<div class="info-container">
 					<p>Coding Blog</p>
 				</div>
 			</a>
 		</div>
 		<div class="thumb">
-			<a href="#">
-				<img src="#">
+			<a href="assets/images/palindromeChecker.png" target="_blank">
+				<img src="assets/images/palindromeChecker.png">
 				<div class="info-container">
-					<p>JavaScript Binary Clock</p>
+					<p>Palindrome Checker</p>
 				</div>
 			</a>
 		</div>
-		<div class="thumb">
-			<a href="#">
-				<img src="assets/images/originalfolio-project.png">
+	<!-- 	<div class="thumb">
+			<a href="https://codepen.io/sunbun2461/pen/PyrGXY">
+				<img src="assets/images/originalfolio-project2.png">
 				<div class="info-container">
 					<p>first freeCodeCamp Project</p>
 				</div>
 			</a>
-		</div>
+		</div> -->
 		<div class="thumb">
-			<a href="#">
-				<img src="assets/images/techdocument-project.png">
+			<a href="https://codepen.io/sunbun2461/pen/ePKywV" target="_blank">
+				<img src="assets/images/techdocument-project2.png">
 				<div class="info-container">
 					<p>HTML5 Technical Document</p>
 				</div>
